# HeapManagerInCpp

./: CMakeLists.txt
header/: FirstFit.h  List.h  MemoryHandler.h  MemoryManager.h  Mempool.h  Method.h  Node.h  mem_control_block.h
src/: FirstFit.cpp  MemoryHandler.cpp  MemoryManager.cpp  Mempool.cpp  main.cpp
